# tickerTalk

./: .gitignore  AGENTS.md  ARCHITECTURE.md  FINNHUB_SETUP.md  IMPLEMENTATION.md  IMPROVEMENTS.md  README.md  RECOMMENDATION_LOGIC.md  SENTIMENT_SETUP.md  TESTING.md  compare_systems.py  gunicorn.conf.py  main.py  pyproject.toml  requirements.txt  setup_sentiment.sh  test_chat.sh  test_comparison.sh  wsgi.py
adapters/company_lookup/: __init__.py  interface.py  yahoo_company_lookup_adapter.py
adapters/market_data/: __init__.py  interface.py  screener_interface.py  yahoo_finance_adapter.py  yahoo_finance_screener_adapter.py
adapters/news/: __init__.py  finnhub_adapter.py  interface.py
adapters/nlp/: __init__.py  interface.py
adapters/sentiment/: __init__.py  finbert_adapter.py  interface.py
application/use_cases/: run_stock_analysis.py
config/: .env.example
core/analysis/: recommendation_engine.py
scripts/: run-dev-log.sh
scripts/testing/: compare_systems.py  test_chat.sh  test_comparison.sh
src/: agent.py  agent_improved.py  mcp_agent.py  mcp_orchestrator.py
src/tools/: article_scraper.py  base.py  company_search.py  finnhub_news.py  fundamental_analysis.py  intraday_graph.py  rss_news.py  sentiment_analysis.py  technical_analysis.py  web_search.py
tests/: test_cache.py  test_recommendation_engine.py  test_stock_service.py
tests/unit/: test_agent_improved_horizon_summaries.py  test_cache.py  (+4 more)
web/: app.py  app_old.py  components.js  config.py  index.html  index_old.html  main.js  main.js.backup  services.js  style.css  utils.js
(+18 files in other folders)
