[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["core", "adapters", "application", "web", "src"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203", "W503"]
exclude = [".venv", "__pycache__"]

[tool.mypy]
python_version = 3.11
strict = false
ignore_missing_imports = true

[project]
name = "stock-market-agent"
version = "0.1.0"
description = "Unified stock market analysis agent with adapters and domain layer"
authors = [{name = "Mayur Nankani"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
